--- a/src/components/SocialMediaLinks.astro
+++ b/src/components/SocialMediaLinks.astro
@@ -1,13 +1,12 @@
 ---
 import { Icon } from "astro-icon";
-import { socialLinks } from "../consts.ts";
-
+import { SOCIAL_LINKS } from "src/consts.ts";
 ---
 
 <div class="flex flex-wrap items-end gap-x-4">
 	<ul class="flex flex-wrap flex-1 items-center gap-x-2 sm:flex-initial">
 		{
-			socialLinks.map(({ link, icon, friendlyName}) => (
+			SOCIAL_LINKS.map(({ link, icon, friendlyName }) => (
 				<li class="flex">
 					<a
 						class="inline-block p-1 sm:hover:text-accent"
@@ -16,7 +15,12 @@ import { socialLinks } from "../consts.ts";
 						rel={`noopener noreferrer`}
 						title={friendlyName}
 					>
-						<Icon class="h-5 w-5" name={icon} aria-hidden="true" focusable="false" />
+						<Icon
+							class="h-5 w-5"
+							name={icon}
+							aria-hidden="true"
+							focusable="false"
+						/>
 						<span class="sr-only">{friendlyName}</span>
 					</a>
 				</li>
