--- a/src/pages/[lang]/blog/[slug].astro
+++ b/src/pages/[lang]/blog/[slug].astro
@@ -1,7 +1,11 @@
 ---
 import type { InferGetStaticPropsType, GetStaticPaths } from "astro";
 import BlogPost from "@/layouts/BlogPost";
-import { filterByLanguage, getAllPosts, getSlugFromPost } from "@/utils";
+import {
+	filterByLanguage,
+	getAllPosts,
+	getSlugFromCollectionEntry,
+} from "@/utils";
 import { getSupportedLanguages, type SupportedLanguage } from "src/utils/i18n";
 import type { CollectionEntry } from "astro:content";
 
@@ -14,7 +18,9 @@ export const getStaticPaths = (async () => {
 		);
 
 		return filteredByLanguage.map((post) => {
-			const slug = getSlugFromPost(post as CollectionEntry<"blog">);
+			const slug = getSlugFromCollectionEntry(
+				post as CollectionEntry<"blog">,
+			);
 			return {
 				params: { lang, slug },
 				props: { post },
