--- a/src/pages/[lang]/projects/[slug].astro
+++ b/src/pages/[lang]/projects/[slug].astro
@@ -28,7 +28,7 @@ export const getStaticPaths = (async () => {
 		});
 	});
 }) satisfies GetStaticPaths;
-type Props = InferGetStaticPropsType<typeof getStaticPaths>;
+export type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { project } = Astro.props;
 const { Content } = await project.render();
