--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -22,7 +22,7 @@ const {
 ---
 
 <!doctype html>
-<html lang={Astro.currentLocale} class="dark">
+<html lang={lang || Astro.currentLocale} class="dark">
 	<head>
 		<BaseHead title={title} description={description} image={image} />
 	</head>
