--- a/src/layouts/Project.astro
+++ b/src/layouts/Project.astro
@@ -50,7 +50,7 @@ const articleDate = pubDate.toISOString();
 			{
 				platform && (
 					<li class="project-frontmatter-item">
-						<small>PLATFORM</small>
+						<small>{translate("project.platform").text}</small>
 						<span>{platform}</span>
 					</li>
 				)
@@ -58,7 +58,7 @@ const articleDate = pubDate.toISOString();
 			{
 				stack && (
 					<li class="project-frontmatter-item">
-						<small>STACK</small>
+						<small>{translate("project.stack").text}</small>
 						<ul class="inline-flex gap-2 sm:gap-4">
 							{stack.map((s: string) => (
 								<li>
@@ -77,7 +77,7 @@ const articleDate = pubDate.toISOString();
 			{
 				website && (
 					<li class="project-frontmatter-item">
-						<small>WEBSITE</small>
+						<small>{translate("project.website").text}</small>
 						<a href={website} target="_blank" class="cody-link">
 							{website}
 						</a>
