--- a/src/pages/[lang]/blog/pages/[page].astro
+++ b/src/pages/[lang]/blog/pages/[page].astro
@@ -98,7 +98,7 @@ const paginationProps = {
 				<ul class="flex gap-2 flex-wrap mb-4">
 					{tags.map((tag) => (
 						<li class="tag">
-							<a href={`/tags/${tag}`} aria-label={`tag: ${tag}`}>
+							<a href={`/${lang}/tags/${tag}`} aria-label={`tag: ${tag}`}>
 								{tag}
 							</a>
 						</li>
