--- a/src/pages/[lang]/tags/[tag]/[...page].astro
+++ b/src/pages/[lang]/tags/[tag]/[...page].astro
@@ -68,7 +68,7 @@ const paginationProps = {
 
 <BaseLayout title={meta.title} description={meta.description}>
 	<h1 class="title flex items-center">
-		<a href="/tags/" class="text-accent sm:hover:underline">Tags</a>
+		<a href="/${lang}/tags/" class="text-accent sm:hover:underline">Tags</a>
 		<span class="me-3 ms-2">→</span>
 		<span>#{tag}</span>
 	</h1>
