add pagefind source

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -59,3 +59,7 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<!-- PageFind -->
+<link href="/_pagefind/pagefind-ui.css" rel="stylesheet" />
+<script src="/_pagefind/pagefind-ui.js" type="text/javascript" is:inline></script>
