add pagefind indexing tag

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -21,7 +21,7 @@ const { title = "", description = siteConfig.description, image } = Astro.props;
 	<body>
 		<Header/>
 		<main>
-			<section class="cody-bg">
+			<section class="cody-bg" data-pagefind-body>
 				<slot/>
 			</section>
 		</main>
