--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -18,12 +18,12 @@ import { Icon } from "astro-icon";
 	/>
     </button>
     <dialog
-	class="h-full w-full max-h-full max-w-full open:flex close:hidden justify-center relative z-10 shadow-sm backdrop:backdrop-blur-sm o"
+	class="h-full w-full max-h-full max-w-full open:flex close:hidden justify-center relative z-10 shadow-sm bg-transparent"
 	data-dialog
 	id="search-dialog"
 	role="dialog"
     >
-	<div class="dialog-frame flex grow flex-row gap-4 items-start justify-between my-16 p-4 border border-1 border-accent max-w-6xl">
+	<div class="dialog-frame flex grow flex-row gap-4 items-start justify-between my-16 p-4 border border-1 border-accent max-w-6xl bg-surface">
 	    <div id="cody-search"></div>
 	    <button data-close-modal>
 		<Icon
@@ -49,6 +49,7 @@ class SiteSearch extends HTMLElement {
     openModalBtn: HTMLButtonElement | null;
     closeModalBtn: HTMLButtonElement | null;
     dialogElement: HTMLDialogElement | null;
+    dialogFrame: HTMLDivElement | null;
 
     constructor() {
 	super();
@@ -56,10 +57,12 @@ class SiteSearch extends HTMLElement {
 	this.openModalBtn = this.querySelector<HTMLButtonElement>("button[data-open-modal]");
 	this.dialogElement = this.querySelector<HTMLDialogElement>("dialog#search-dialog");
 	this.closeModalBtn = this.querySelector<HTMLButtonElement>("button[data-close-modal]");
+	this.dialogFrame = this.querySelector<HTMLDivElement>("div.dialog-frame");
 
 	// bind functions
 	this.openModal = this.openModal.bind(this);
 	this.closeModal = this.closeModal.bind(this);
+	this.onWindowClick = this.onWindowClick.bind(this);
 
 	// initalize event handlers
 	if (this.openModalBtn){
@@ -70,37 +73,39 @@ class SiteSearch extends HTMLElement {
 	    this.closeModalBtn.addEventListener("click", this.closeModal);
 	}
 
-	if (this.dialogElement) {
-	    // this.dialogElement.showModal();
+	if(this.dialogElement) {
 	    this.dialogElement.addEventListener("close", () => {
 		window.removeEventListener("click", this.onWindowClick);
-	    });
-	} else {
-	    console.warn("Dialog not found")
+	    })
 	}
     }
 
     openModal(event?: MouseEvent) {
 	if (this.dialogElement) {
 	    this.dialogElement.showModal();
-	    console.log("open")
 
 	    this.querySelector("input")?.focus();
 	    event?.stopPropagation();
+	    window.addEventListener("click", this.onWindowClick);
 	}
     }
 
     closeModal(event?: MouseEvent) {
 	if (this.dialogElement) {
 	    this.dialogElement.close();
-	    console.log("close")
 	}
     }
 
-    onWindowClick(){
-	console.log("close dialog")
-    }
+    onWindowClick (e: MouseEvent) {
+	const isLink = "href" in (e.target || {})
 
+	if(isLink 
+	    || (document.body.contains(e.target as Node) 
+	    && !this.dialogFrame?.contains(e.target as Node))
+	) {
+	    this.closeModal();
+	}
+    }
 }
 
 customElements.define("site-search", SiteSearch);
