--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -55,10 +55,7 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 {
 	articleDate && (
 		<>
-			<meta
-				property="article:author"
-				content={siteConfig.profile.author}
-			/>
+			<meta property="article:author" content={siteConfig.profile.author} />
 			<meta property="article:published_time" content={articleDate} />
 		</>
 	)
@@ -72,5 +69,5 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 <!-- PageFind -->
-<link href="/_pagefind/pagefind-ui.css" rel="stylesheet" />
-<script src="/_pagefind/pagefind-ui.js" type="text/javascript" is:inline></script>
+<script src="/_pagefind/pagefind-ui.js" type="text/javascript" is:inline
+></script>
